--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theme switcher</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="container">
-      <form action="">
-        <legend>Pick a color theme</legend>
-        <label class="visually-hidden" for="theme-light">Light</label>
-        <input type="radio" id="theme-light" name="theme" value="light" checked />
-        <label class="visually-hidden" for="theme-pink">Pink</label>
-        <input type="radio" id="theme-pink" name="theme" value="pink" />
-        <label class="visually-hidden" for="theme-blue">Blue</label>
-        <input type="radio" id="theme-blue" name="theme" value="blue" />
-        <label class="visually-hidden" for="theme-green">Green</label>
-        <input type="radio" id="theme-green" name="theme" value="green" />
-        <label class="visually-hidden" for="theme-dark">Dark</label>
-        <input type="radio" id="theme-dark" name="theme" value="dark" />
+      <form class="theme-switcher" action="">
+        <fieldset>
+          <legend class="visually-hidden">Pick a color theme</legend>
+          <label class="visually-hidden" for="theme-light">Light</label>
+          <input type="radio" id="theme-light" name="theme" value="light" checked />
+          <label class="visually-hidden" for="theme-pink">Pink</label>
+          <input type="radio" id="theme-pink" name="theme" value="pink" />
+          <label class="visually-hidden" for="theme-blue">Blue</label>
+          <input type="radio" id="theme-blue" name="theme" value="blue" />
+          <label class="visually-hidden" for="theme-green">Green</label>
+          <input type="radio" id="theme-green" name="theme" value="green" />
+          <label class="visually-hidden" for="theme-dark">Dark</label>
+          <input type="radio" id="theme-dark" name="theme" value="dark" />
+        </fieldset>
       </form>
     </div>
     <div class="container">
