Add functionality with css only

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
           </p>
         </li>
       </ul>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam delectus possimus sapiente, velit distinctio
+        omnis maxime quas reprehenderit eveniet eligendi architecto voluptates necessitatibus dolor quis nisi! Accusamus
+        sit nobis quos consequatur nemo cumque fugit aliquid facilis accusantium temporibus neque sapiente dicta in
+        porro dolorum cupiditate officiis voluptate, repellendus laboriosam, placeat numquam aliquam minus saepe. Autem
+        dolorum vitae eveniet explicabo iste ea ratione? Distinctio quidem, officiis temporibus voluptatum, placeat
+        animi, aut hic recusandae quos error unde. Perspiciatis veritatis dicta aperiam tempore maiores iusto suscipit
+        architecto ab in officiis ducimus nihil omnis, ipsa pariatur explicabo earum exercitationem deserunt nemo
+        voluptatem vero reiciendis voluptates, iure ratione natus. Voluptatem corporis iusto quis. Repellendus error
+        nulla harum voluptatem ex blanditiis sapiente mollitia eum odit, natus incidunt nesciunt saepe itaque quod,
+        veritatis ea aut tempore magnam. Unde commodi ullam labore impedit esse temporibus aut, laudantium quia
+        distinctio est, ut numquam corporis repellendus qui laborum suscipit amet tenetur vel obcaecati! Quam labore
+        dolor, aut quisquam expedita ex quibusdam debitis veritatis officiis laboriosam porro harum rem magnam impedit
+        quo repellat sed. Accusamus impedit facilis quia, cum consequuntur, alias vel ea inventore vitae voluptatem
+        fugiat facere quos, voluptates iusto culpa perferendis. Voluptates sint dolorem nostrum, quam modi nulla
+        provident.
+      </p>
     </div>
   </body>
 </html>
